<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="?attr/colorPrimary">

            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/txtDataViagem"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_above="@+id/cartaoLayout"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="23/12/12 22:35"
                android:textAlignment="textStart"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/historicoViagensLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/origem"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/txtOrigemViavem"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="11dp"
                        android:layout_marginStart="5dp"
                        android:text="CARAPICUIBA"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:background="@color/cardview_shadow_start_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/destino"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/txtDestinoViagem"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="AMADOR BUENO"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:background="@color/cardview_shadow_start_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/valor"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/txtValorViagem"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="R$ 3,45"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
